--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -69,6 +69,8 @@
 }
 
 
+
+
 @inproceedings{yu_compressing_2017,
 	title = {On Compressing Deep Models by Low Rank and Sparse Decomposition},
 	url = {https://openaccess.thecvf.com/content_cvpr_2017/html/Yu_On_Compressing_Deep_CVPR_2017_paper.html},
@@ -91,7 +93,7 @@
 	number = {4},
 	journaltitle = {Multiscale Modeling \& Simulation},
 	shortjournal = {Multiscale Model. Simul.},
-	author = {Fan, Yuwei and Lin, Lin and Ying, Lexing and Zepeda-Nún͂ez, Leonardo},
+	author = {Fan, Yuwei and Lin, Lin and Ying, Lexing and Zepeda-Núñez, Leonardo},
 	urldate = {2022-02-18},
 	date = {2019-01},
 	note = {Publisher: Society for Industrial and Applied Mathematics},
@@ -115,40 +117,6 @@
 	langid = {english},
 	keywords = {Balanced structure, Hierarchical Tucker, Hybrid tensor decomposition, Neural network compression, Tensor-train},
 	file = {ScienceDirect Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/DPG9GGZZ/S0893608020303294.html:text/html;Eingereichte Version:/home/stephan/snap/zotero-snap/common/Zotero/storage/PYE8ISCU/Wu et al. - 2020 - Hybrid tensor decomposition in neural network comp.pdf:application/pdf},
-}
-
-@article{pati_analysis_1993,
-	title = {Analysis and synthesis of feedforward neural networks using discrete affine wavelet transformations},
-	volume = {4},
-	issn = {1941-0093},
-	doi = {10.1109/72.182697},
-	abstract = {A representation of a class of feedforward neural networks in terms of discrete affine wavelet transforms is developed. It is shown that by appropriate grouping of terms, feedforward neural networks with sigmoidal activation functions can be viewed as architectures which implement affine wavelet decompositions of mappings. It is shown that the wavelet transform formalism provides a mathematical framework within which it is possible to perform both analysis and synthesis of feedforward networks. For the purpose of analysis, the wavelet formulation characterizes a class of mappings which can be implemented by feedforward networks as well as reveals an exact implementation of a given mapping in this class. Spatio-spectral localization properties of wavelets can be exploited in synthesizing a feedforward network to perform a given approximation task. Two synthesis procedures based on spatio-spectral localization that reduce the training problem to one of convex optimization are outlined.{\textless}{\textgreater}},
-	pages = {73--85},
-	number = {1},
-	journaltitle = {{IEEE} Transactions on Neural Networks},
-	author = {Pati, Y.C. and Krishnaprasad, P.S.},
-	date = {1993-01},
-	note = {Conference Name: {IEEE} Transactions on Neural Networks},
-	keywords = {Neural networks, Biology computing, Control systems, Discrete wavelet transforms, Feedforward neural networks, Motion control, Network synthesis, Performance analysis, Wavelet analysis, Wavelet transforms},
-	file = {Eingereichte Version:/home/stephan/snap/zotero-snap/common/Zotero/storage/85UZBJBU/Pati und Krishnaprasad - 1993 - Analysis and synthesis of feedforward neural netwo.pdf:application/pdf;IEEE Xplore Abstract Record:/home/stephan/snap/zotero-snap/common/Zotero/storage/IH976WXW/182697.html:text/html},
-}
-
-@article{postalcioglu_wavelet_2007,
-	title = {Wavelet networks for nonlinear system modeling},
-	volume = {16},
-	issn = {1433-3058},
-	url = {https://doi.org/10.1007/s00521-006-0069-3},
-	doi = {10.1007/s00521-006-0069-3},
-	abstract = {This study presents a nonlinear systems and function learning by using wavelet network. Wavelet networks are as neural network for training and structural approach. But, training algorithms of wavelet networks is required a smaller number of iterations when the compared with neural networks. Gaussian-based mother wavelet function is used as an activation function. Wavelet networks have three main parameters; dilation, translation, and connection parameters (weights). Initial values of these parameters are randomly selected. They are optimized during training (learning) phase. Because of random selection of all initial values, it may not be suitable for process modeling. Because wavelet functions are rapidly vanishing functions. For this reason heuristic procedure has been used. In this study serial-parallel identification model has been applied to system modeling. This structure does not utilize feedback. Real system outputs have been exercised for prediction of the future system outputs. So that stability and approximation of the network is guaranteed. Gradient methods have been applied for parameters updating with momentum term. Quadratic cost function is used for error minimization. Three example problems have been examined in the simulation. They are static nonlinear functions and discrete dynamic nonlinear system.},
-	pages = {433--441},
-	number = {4},
-	journaltitle = {Neural Computing and Applications},
-	shortjournal = {Neural Comput \& Applic},
-	author = {Postalcioglu, Seda and Becerikli, Yasar},
-	urldate = {2022-02-18},
-	date = {2007-05-01},
-	langid = {english},
-	file = {Springer Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/PJ9FYUV2/Postalcioglu und Becerikli - 2007 - Wavelet networks for nonlinear system modeling.pdf:application/pdf},
 }
 
 @inproceedings{hassibi_optimal_1993,
@@ -311,3 +279,46 @@ Trained Models at http://dx.doi.org/10.5281/zenodo.53189},
 	langid = {english},
 	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/HEQQYRFR/Blalock et al. - 2020 - What is the State of Neural Network Pruning.pdf:application/pdf;Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/IJPBTXPB/d2ddea18f00665ce8623e36bd4e3c7c5-Abstract.html:text/html},
 }
+
+@inproceedings{ithapu_decoding_2017,
+	title = {Decoding the Deep: Exploring Class Hierarchies of Deep Representations Using Multiresolution Matrix Factorization},
+	url = {https://openaccess.thecvf.com/content_cvpr_2017_workshops/w26/html/Ithapu_Decoding_the_Deep_CVPR_2017_paper.html},
+	shorttitle = {Decoding the Deep},
+	eventtitle = {Proceedings of the {IEEE} Conference on Computer Vision and Pattern Recognition Workshops},
+	pages = {45--54},
+	author = {Ithapu, Vamsi K.},
+	urldate = {2022-03-07},
+	date = {2017},
+	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/7432CCFJ/Ithapu - 2017 - Decoding the Deep Exploring Class Hierarchies of .pdf:application/pdf;Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/ZGMIYJI6/Ithapu_Decoding_the_Deep_CVPR_2017_paper.html:text/html},
+}
+
+@inproceedings{rigamonti_learning_2013,
+	title = {Learning Separable Filters},
+	url = {https://openaccess.thecvf.com/content_cvpr_2013/html/Rigamonti_Learning_Separable_Filters_2013_CVPR_paper.html},
+	eventtitle = {Proceedings of the {IEEE} Conference on Computer Vision and Pattern Recognition},
+	pages = {2754--2761},
+	author = {Rigamonti, Roberto and Sironi, Amos and Lepetit, Vincent and Fua, Pascal},
+	urldate = {2022-03-10},
+	date = {2013},
+	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/RZVWQNRI/Rigamonti et al. - 2013 - Learning Separable Filters.pdf:application/pdf;Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/I6VNFB85/Rigamonti_Learning_Separable_Filters_2013_CVPR_paper.html:text/html},
+}
+
+@inproceedings{zhou_greedy_2013,
+	title = {Greedy Bilateral Sketch, Completion \& Smoothing},
+	url = {https://proceedings.mlr.press/v31/zhou13b.html},
+	abstract = {Recovering a large low-rank matrix from highly corrupted, incomplete or sparse outlier overwhelmed observations is the crux of various intriguing statistical problems. We explore the power of "greedy bilateral ({GreB})" paradigm in reducing both time and sample complexities for solving these problems. {GreB} models a low-rank variable as a bilateral factorization, and updates the left and right factors in a mutually adaptive and greedy incremental manner. We detail how to model and solve low-rank approximation, matrix completion and robust {PCA} in {GreB}’s paradigm. On their {MATLAB} implementations, approximating a noisy 10000x10000 matrix of rank 500 with {SVD} accuracy takes 6s; {MovieLens}10M matrix of size 69878x10677 can be completed in 10s from 30\% of 10{\textasciicircum}7 ratings with {RMSE} 0.86 on the rest 70\%; the low-rank background and sparse moving outliers in a 120x160 video of 500 frames are accurately separated in 1s. This brings 30 to 100 times acceleration in solving these popular statistical problems.},
+	eventtitle = {Artificial Intelligence and Statistics},
+	pages = {650--658},
+	booktitle = {Proceedings of the Sixteenth International Conference on Artificial Intelligence and Statistics},
+	publisher = {{PMLR}},
+	author = {Zhou, Tianyi and Tao, Dacheng},
+	urldate = {2022-03-10},
+	date = {2013-04-29},
+	langid = {english},
+	note = {{ISSN}: 1938-7228},
+	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/FHS7RRHQ/Zhou und Tao - 2013 - Greedy Bilateral Sketch, Completion & Smoothing.pdf:application/pdf},
+}
+
+
+
+
